# bevy-based-editor

./: Cargo.toml  clippy.toml  readme.md
.cargo/: config.toml
common/: Cargo.toml
editor/: Cargo.toml
editor/src/: active_selection.rs  camera.rs  main.rs
editor/src/ui/: editor_screen_space.rs  hierarchy.rs  left_panel.rs  mod.rs
editor/src/ui/inspector/: entity_info.rs  mod.rs  transform_info.rs
