[workspace]
members = ["common", "editor"]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.13.0" }
bevy_egui = { version = "0.27" }
cargo-watch = { version = "8.5.2" }
